# squishy_volumes

./: .gitignore  CHANGELOG.md  CHANGELOG_FULL.md  LICENSE_MIT.md  README.md
python/: .gitignore  __init__.py  append_hander.py  bridge.py  couple_utils.py  frame_change.py  hint_at_info.py  input_capture.py  magic_consts.py  output.py  popup.py  preferences.py  progress_update.py  pyproject.toml  reload_utils.py  script_utils.py  setup.py  shim.py  skin_utils.py  util.py  view_utils.py
python/nodes/: __init__.py  drivers.py  geometry_ndoes_generate_goal_positions.json  geometry_nodes_generate_collider.json  geometry_nodes_generate_goal_positions.json  geometry_nodes_generate_particles.json  geometry_nodes_grid_distance.json  geometry_nodes_grid_distance.py  geometry_nodes_grid_momentum.py  geometry_nodes_move_with_reference.json  geometry_nodes_move_with_reference.py  geometry_nodes_particles.json  geometry_nodes_particles.py  geometry_nodes_remove_broken.py  geometry_nodes_restrict_view.json  geometry_nodes_restrict_view.py  geometry_nodes_store_breaking_frame.py  geometry_nodes_store_reference.py  geometry_nodes_surface_samples.json  geometry_nodes_surface_samples.py  material_colored_instances.json  material_colored_instances.py  material_display_uvw.json  material_display_uvw.py
python/panels/: __init__.py  panel_bake.py  panel_input.py  panel_output.py  panel_overview.py  panel_restart_update.py  panel_tutorial.py
python/properties/: __init__.py  blended_mpm_collection.py  blended_mpm_object.py  blended_mpm_object_attributes.py  blended_mpm_object_settings.py  blended_mpm_scene.py  blended_mpm_simulation.py  blended_mpm_simulation_settings.py  squishy_volumes_collection.py  squishy_volumes_object.py  squishy_volumes_object_attributes.py  squishy_volumes_object_input_settings.py  squishy_volumes_object_output_settings.py  squishy_volumes_object_settings.py  squishy_volumes_scene.py  squishy_volumes_simulation.py  squishy_volumes_simulation_settings.py  util.py
python/src/squishy_volumes_extension/: __init__.py  append_hander.py  bridge.py  frame_change.py  get_preferences.py  goals.py  input_capture.py  magic_consts.py  output.py  popup.py  preferences.py  progress_update.py  script_utils.py  shim.py  util.py  view_utils.py
python/src/squishy_volumes_extension/example/: __init__.py  benchmark.py  boing_block.py
python/src/squishy_volumes_extension/nodes/: __init__.py  drivers.py  geometry_nodes_generate_collider.json  geometry_nodes_grid_distance.json  geometry_nodes_particles.json
python/src/squishy_volumes_extension/panels/: __init__.py  panel_bake.py  panel_input.py  panel_output.py  panel_overview.py  panel_simulate.py
python/src/squishy_volumes_extension/properties/: squishy_volumes_object_output_settings.py  squishy_volumes_simulation.py
python/src/squishy_volumes_extension/squishy_volumes_properties/: __init__.py  object.py  object_input.py  object_output.py  object_simulation.py  scene.py
python/src/squishy_volumes_extension/startup/: __init__.py  benchmark.py
rust/: Cargo.toml
rust/crates/api/: Cargo.toml
rust/crates/api/src/: context.rs  lib.rs  simulation.rs  simulation_input.rs
rust/crates/cache/: Cargo.toml
rust/crates/cache/src/: cache.rs  errors.rs  lib.rs  store_thread.rs  util.rs
rust/crates/cli/: Cargo.toml
rust/crates/cli/src/: main.rs
rust/crates/core/: Cargo.toml
rust/crates/core/src/: attributes.rs  compute_thread.rs  context.rs  directory_lock.rs  errors.rs  initialization.rs  input_bulk.rs  input_interpolation.rs  lib.rs  mesh.rs  report.rs  simulation.rs  simulation_input.rs  stats.rs
rust/crates/cpu/: Cargo.toml
rust/crates/cpu/src/: adaptive_time_step_state.rs  cpu_state.rs  errors.rs  grid_nodes.rs  interpolated_input.rs  kernels.rs  lib.rs  particles.rs
rust/crates/data/: Cargo.toml
rust/crates/data/src/: lib.rs
rust/crates/directory_lock/: Cargo.toml
rust/crates/directory_lock/src/: lib.rs
rust/crates/file_frame/: Cargo.toml
rust/crates/file_frame/src/: errors.rs  grid_nodes.rs  io_state.rs  lib.rs  particles.rs
rust/crates/file_input/: Cargo.toml
rust/crates/file_input/src/: collider_inputs.rs  common.rs  errors.rs  frame.rs  header.rs  lib.rs  reading.rs  tests.rs  writing.rs
rust/crates/file_util/: Cargo.toml
rust/crates/file_util/src/: lib.rs
rust/crates/gpu/: Cargo.toml  build.rs
rust/crates/gpu/src/: allocator.rs  allowed_in_binding.rs  bounding_volume_hierarchy.rs  combined_with_collider_bits.rs  compiled_module.rs  context.rs  download.rs  error.rs  gpu_state.rs  indirect.rs  lib.rs  particle_parameters.rs  pipeline_part.rs  profiler_output.rs  status.rs  svd.rs  test_util.rs  torus.rs  triangle.rs  util.rs  util.wgsl
rust/crates/gpu_cli/: Cargo.toml
rust/crates/gpu_cli/scripts/: only_plot.sh  run_and_plot.sh  runtime_and_throughput.gplot
rust/crates/gpu_cli/src/: build_hash_table.rs  collect.rs  count_colliders.rs  detect_colliders.rs  main.rs  positions_to_keys.rs  prefix_sum.rs  prepare_grid.rs  radix_sort.rs  scatter.rs  sort_positions_into_cells.rs  step.rs  window.rs
rust/crates/gpu_with_block_cli/: Cargo.toml
rust/crates/gpu_with_block_cli/scripts/: test_vs_cpu.sh
rust/crates/gpu_with_block_cli/src/: build_hash_table_from_cells.rs  prepare_grid.rs  profiler_output.rs  radix_sort.rs  step.rs  window.rs
rust/crates/gpu_with_blocks/: Cargo.toml  build.rs
rust/crates/gpu_with_blocks/src/: allocator.rs  allowed_in_binding.rs  context.rs  error.rs  indirect.rs  pipeline_part.rs  test_util.rs  util.rs
rust/crates/gpu_with_blocks_cli/: Cargo.toml
rust/crates/gpu_with_blocks_cli/scripts/: only_plot.sh  run_and_plot.sh
rust/crates/gpu_with_blocks_cli/src/: detect_colliders.rs  prefix_sum.rs
rust/crates/hot/: Cargo.toml  build.rs
rust/crates/hot/src/: lib.rs
rust/crates/input_file/: Cargo.toml
rust/crates/input_file/src/: errors.rs  frame.rs  header.rs
rust/crates/mesh_util/: Cargo.toml
rust/crates/plot/: Cargo.toml
rust/crates/util/: Cargo.toml
rust/crates/wrap/: Cargo.toml  deny.toml  pyproject.toml
rust/crates/xpu/: Cargo.toml
(+419 files in other folders)
