[workspace]
resolver = "2"
members = [ "crates/*" ]

[workspace.dependencies]
anyhow = "1.0.93"
serde_json = "1.0.132"
serde = { version = "1.0.214", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.20"
coarse-prof = "0.2.6"
# TODO: serious performance issues on serialization!
#bincode = "2.0.1"
bincode = "1.3.3"
build-info = "0.0.41"
build-info-build = "0.0.41"
thiserror = "2.0.17"
clap = { version = "4.5.23", features = ["derive"] }
nalgebra = { version = "0.33.2", features = ["serde-serialize", "rand", "bytemuck"] }
wgpu = "30.0.0"

# This fork has updated wgpu dep to 30
#wgpu-profiler = "0.27.0"
wgpu-profiler.git = "https://github.com/akx/wgpu-profiler.git"
wgpu-profiler.rev = "6b5992b3fa8627a2516e13aee564b2421b93df91"

pollster = "0.4.0"
bytemuck = { version = "1.25.0", features = [ "derive", "extern_crate_alloc", "extern_crate_std" ] }
rand = { version = "0.10.0", features = ["chacha"] }
env_logger = "0.11.9"
bitflags = "2.10.0"
num = "0.4.3"
iter_enumeration = "0.1.0"
rayon = "1.10.0"
rustc-hash = "2.1.1"
smallvec = { version = "1.15.2", features = ["serde"] }
itertools = "0.14.0"
strum_macros = "0.26.4"
strum = { version = "0.26.3", features = ["derive"] }
wesl = { version = "0.4.0", features = ["naga-ext"] }

# We need to know the subgroup size on Metal
# https://github.com/gfx-rs/wgpu/pull/9876
[patch.crates-io]
wgpu.git = "https://github.com/Vollkornaffe/wgpu.git"
wgpu.rev = "6dfafde0788f6f7d6c097aa0d0e188cd16d01cbf"
