[package]
name = "squishy_volumes_cli"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
profile = [ "squishy_volumes_core/profile", "dep:coarse-prof" ]

[dependencies]
plotters = "0.3.7"
squishy_volumes_api.path = "../api"
squishy_volumes_core.path = "../core"
squishy_volumes_gpu.path = "../gpu"
ctrlc = "3.4.5"

clap.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bincode.workspace = true

coarse-prof.workspace = true
coarse-prof.optional = true
uuid = { version = "1.16.0", features = ["v4"] }

# for flame graphs
#[profile.release]
#debug = true
