[package]
name = "squishy_volumes_core"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
f64 = [ "squishy_volumes_api/f64" ]
profile = [ "dep:coarse-prof" ]

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
strum_macros = "0.26.4"
strum = { version = "0.26.3", features = ["derive"] }
base64 = "0.22.1"
tempfile = "3.23.0"
rand = { version = "0.10.0", features = ["chacha"] }

iter_enumeration.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde_json.workspace = true
serde.workspace = true
bincode.workspace = true
thiserror.workspace = true
build-info.workspace = true
nalgebra.workspace = true
bitflags.workspace = true
rayon.workspace = true
rustc-hash.workspace = true
smallvec.workspace = true

coarse-prof.workspace = true
coarse-prof.optional = true
itertools = "0.14.0"
roots = "0.0.8"

squishy_volumes_util.path = "../util"
squishy_volumes_api.path = "../api"
squishy_volumes_gpu.path = "../gpu"
small-map = { version = "0.1.5", features = ["serde"] }

[build-dependencies]
build-info-build.workspace = true
