[package]
name = "squishy_volumes_core"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
profile = [ "squishy_volumes_cpu/profile", "squishy_volumes_util/profile" ]

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
nalgebra.workspace = true
bytemuck.workspace = true
strum.workspace = true
strum_macros.workspace = true
iter_enumeration.workspace = true

squishy_volumes_api.path = "../api"
squishy_volumes_xpu.path = "../xpu"
squishy_volumes_gpu.path = "../gpu"
squishy_volumes_cpu.path = "../cpu"
squishy_volumes_cache.path = "../cache"
squishy_volumes_directory_lock.path = "../directory_lock"
squishy_volumes_file_input.path = "../file_input"
squishy_volumes_file_frame.path = "../file_frame"
squishy_volumes_util.path = "../util"
