[package]
name = "squishy_volumes_file_input"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dev-dependencies]
rand.workspace = true
tempfile = "3.23.0"

[dependencies]
serde.workspace = true
bincode.workspace = true
bytemuck.workspace = true
tracing.workspace = true
thiserror.workspace = true

squishy_volumes_file_util.path = "../file_util"
