[package]
name = "squishy_volumes_gpu_cli"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
winit = "0.30.13"
wgpu-profiler = "0.27.0"

clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
wgpu.workspace = true
pollster.workspace = true
bytemuck.workspace = true
env_logger.workspace = true

squishy_volumes_gpu.path = "../gpu"
