[package]
name = "squishy_volumes_gpu_cli"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
winit = "0.30.13"

clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
wgpu.workspace = true
wgpu-profiler.workspace = true
pollster.workspace = true
bytemuck.workspace = true
env_logger.workspace = true
rand.workspace = true
nalgebra.workspace = true

squishy_volumes_util.path = "../util"
squishy_volumes_gpu.path = "../gpu"
convert_case = "0.11.0"
