[package]
name = "squishy_volumes_util"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
rand.workspace = true
nalgebra.workspace = true
thiserror.workspace = true
iter_enumeration.workspace = true
rayon.workspace = true
tracing.workspace = true
clap.workspace = true
bytemuck.workspace = true

squishy_volumes_api.path = "../api"
bumpalo = "3.20.3"
