[package]
name = "squishy_volumes_util"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
profile = [ "dep:coarse-prof" ]

[dev-dependencies]
rand.workspace = true

[dependencies]
nalgebra.workspace = true
thiserror.workspace = true
tracing.workspace = true

coarse-prof.workspace = true
coarse-prof.optional = true
