[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "squishy_volumes_wrap"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
license = "MIT"

[tool.maturin]
features = ["pyo3/extension-module"]
include = [
    "LICENSE_MIT",
    "sbom-buildtools.cdx.xml",
    "sbom-runtime.cdx.xml",
]
